--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -29,7 +29,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540954.md#1" target="_blank">怀旧古早味刨冰</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540954.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/161201211712100692-150x120.jpg" align ="left"></a>“冰”在台湾有很多不同名称，有最早的黑糖锉冰、米苔目刨冰，这些都是横跨好几个世代，以及时下看起来很厉害的无敌芒果冰，暑气蒸人的天气永远是那么热，突然唤起儿时记忆里最消暑的滋味。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 10:31 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540864.md#1" target="_blank">孩子抱怨“不公平” 家长当如何应对</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Fotolia_96382636_Subscription_L-150x120.jpg" align ="left"></a>“这不公平”是孩子们经常说的一句话，通常因为他们认为被区别对待。如何让他们理解这一“区别”来自个人情况的不同，而非行为标准的不同，是父母面临的日常挑战之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 8:51 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522636.md#1" target="_blank">得道高人作“五里雾” 不坠五里雾中！</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/15/n11522636.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2fc53f22595973e266e4cfb06f16ecab-150x120.jpg" align ="left"></a>东汉张楷的志向就是修道，屡次辞了征召不任官。他能作“五里雾”，而他自己是最能看清人生迷雾的有道之士！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 6:07 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/3/4/10/n298732.md#1" target="_blank">古代诗人的修炼故事：贺知章</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/3/4/10/n298732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/04/3052-150x120.jpg" align ="left"></a>贺知章（公元 约659─约744），字季真，自号四明狂客，是盛唐时期有名的诗人。他与张若虚、张旭、包融合称“吴中四士”。他的写景诗清新通俗。他和李白是好朋友，他们都是“饮中八仙”之一。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 5:58 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/26/n11548094.md#1" target="_blank">诗歌：柴桑花</a><br></h3>天上五色霞， 人间柴桑花。 花开何人看， 芳妍东篱下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月26日 5:54 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541349.md#1" target="_blank">诗歌：腊梅之冰心铁骨</a><br></h3>三铸九煆梅骨成，一片冰心月与赠。 腊月寒流高天泻，呼啸声里弥梅馨。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 1:06 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
