--- a/gb/ncid278_2.md
+++ b/gb/ncid278_2.md
@@ -13,7 +13,7 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535626.md#1" target="_blank">反送中人士个资遭泄漏 知情人：中共下黑手</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11535626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/zgzj-150x120.jpg" align ="left"></a>香港反送中人士的个人资料，疑被中共公安有意泄露到网上后，中共多个官媒鼓动大陆网民转发这些外泄的个人信息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 2:36 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534894.md#1" target="_blank">彭斯：是自由而非社会主义造就美国繁荣</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534894.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/3c5ff0860e77fd03cd9ef8e05360cafa-150x120.jpg" align ="left"></a>周四（9月19日），美国副总统彭斯接受美媒采访时，再次强调美国永远都不会是一个社会国家。彭斯表示，美国人都知道，是“自由”非不是“社会主义”造就了这个全球最繁荣的国家；也正是“自由”而非“社会主义”让美国成为全球希望的灯塔。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 10:16 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534713.md#1" target="_blank">李文足第四次会见 王全璋特别关心儿子上学</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534713.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/44-vert-150x120.jpg" align ="left"></a>9月19日，李文足到山东临沂监狱，第四次会见到丈夫王全璋律师。她说，这次看到王全璋比以前几次还要瘦，有三次问及儿子泉泉上学的事情。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 8:46 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank">罗琼:从港人遭遇看中共迫害法轮功的邪恶（1）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/falundafa-600x314-1-150x120.jpg" align ="left"></a>香港反送中运动发展至今仅仅100多天，足以折射出中共的邪恶本性，尤其是对追求“真、善、忍”的法轮功学员20年来惨绝人寰的迫害，以及它镇压民众采取的惊人相似的残暴手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 8:41 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank">罗琼：从港人遭遇看中共迫害法轮功的邪恶</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/8/n11507862.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/falundafa-600x314-1-150x120.jpg" align ="left"></a>香港反送中运动发展至今仅仅100多天，足以折射出中共的邪恶本性，尤其是对追求“真、善、忍”的法轮功学员20年来惨绝人寰的迫害，以及它镇压民众采取的惊人相似的残暴手段。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 8:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534689.md#1" target="_blank">一周连失两个邦交国 台湾批中共金钱利诱</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/20/n11534689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1166921638-150x120.jpg" align ="left"></a>周五（9月20日），太平洋国家基里巴斯（Kiribati）与台湾断绝外交关系，这是在不到一周之内，台湾接连失去了两个外交盟友。台湾外交部长表示，在中共的金钱利益诱惑下，基里巴斯转投中共怀抱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 6:41 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11482022.md#1" target="_blank">上海全家失踪案男主器官被盗 江泽民外甥涉案</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/8/27/n11482022.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1406040858162639-150x120.jpg" align ="left"></a>近日原上海企业家胡力任披露上海一家三口被失踪的惨案，当时五十多岁的户主可以确认被活摘器官。该事件披露出来后引起网上众人的震惊。目前细节还在进一步调查之中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 5:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530187.md#1" target="_blank">21世纪的古拉格真相（3）</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/18/n11530187.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/2019-9-3-123915-67-150x120.jpg" align ="left"></a>自1999年中共江泽民集团对信仰“真、善、忍”的法轮功群体进行灭绝人性的迫害，在“名誉上搞臭、经济上截断、肉体上消灭”的迫害政策下，对法轮功学员实施上百种酷刑折磨、群体性打毒针、下毒药，以及活摘器官。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月20日 4:00 AM							</td></tr>
